--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TeamCharizard</string>
+    <string name="name_of_app">App Name</string>
+    <string name="parent_button">Parent</string>
+    <string name="coach_button">Coach</string>
 </resources>
