--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,24 @@
     <string name="name_of_app">App Name</string>
     <string name="parent_button">Parent</string>
     <string name="coach_button">Coach</string>
+    <string name="action1">2pt fg made</string>
+    <string name="action2">2pt fg missed</string>
+    <string name="action3">3pt fg made</string>
+    <string name="action4">3pt fg missed</string>
+    <string name="action5">Steal</string>
+    <string name="action6">Block</string>
+    <string name="action7">FT made</string>
+    <string name="action8">FT missed</string>
+    <string name="action9">Rebound</string>
+    <string name="action10">Foul</string>
+    <string name="action11"></string>
+    <string name="action12"></string>
+    <string name="add_stats_title">Actions</string>
+    <string name="player1">1</string>
+    <string name="player2">2</string>
+    <string name="player3">3</string>
+    <string name="player4">4</string>
+    <string name="player5">5</string>
+    <string name="team1">Team 1</string>
+    <string name="team2">Team 2</string>
 </resources>
