--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">TeamCharizard</string>
     <string name="name_of_app">App Name</string>
     <string name="view_stats">Player Stats</string>
+    <string name="view_actions">View Actions</string>
     <string name="parent_button">Parent</string>
     <string name="coach_button">Coach</string>
     <string name="fg">FG</string>
@@ -12,6 +13,31 @@
     <string name="steal">STL</string>
     <string name="block">BLK</string>
     <string name="fouls">PF</string>
+    <string name="player_and_team">Player and Team</string>
+    <string name="player_and_team1">P1 T1</string>
+    <string name="player_and_team2">P2 T2</string>
+    <string name="player_and_team3">P3 T3</string>
+    <string name="action">Action</string>
+    <string name="quarter">Quarter</string>
+    <string name="quarter1">1st</string>
+    <string name="quarter2">2nd</string>
+    <string name="quarter3">3rd</string>
+    <string name="quarter4">4th</string>
+    <string name="time">Time</string>
+    <string name="time1">7:30</string>
+    <string name="time2">7:19</string>
+    <string name="time3">7:18</string>
+    <string name="time4">7:10</string>
+    <string name="time5">7:09</string>
+    <string name="time6">7:00</string>
+    <string name="time7">6:59</string>
+    <string name="time8">6:50</string>
+    <string name="time9">6:40</string>
+    <string name="time10">6:39</string>
+    <string name="time11">6:30</string>
+    <string name="time12">6:29</string>
+    <string name="time13">6:20</string>
+    <string name="time14">6:19</string>
     <string name="players">Player Names</string>
     <string name="action1">2pt fg made</string>
     <string name="action2">2pt fg missed</string>
@@ -43,4 +69,9 @@
     <string name="team2">Team 2</string>
     <string name="leagueName"> UIUC </string>
     <string name="game1"> Team1 vs Team2 </string>
+    <string name="team_button"> teams </string>
+    <string name="vs"> vs. </string>
+    <string name="timeExample"> 8:00 </string>
+    <string name="live"> Live </string>
+    <string name="stats"> Stats </string>
 </resources>
