--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="name_of_app">App Name</string>
     <string name="view_stats">Player Stats</string>
     <string name="view_actions">View Actions</string>
-    <string name="parent_button">Parent</string>
-    <string name="coach_button">Coach</string>
+    <string name="parent_button">View Stats</string>
+    <string name="coach_button">Referee</string>
     <string name="fg">FG</string>
     <string name="ThreePT">3PT</string>
     <string name="points">PTS</string>
