--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,8 +70,12 @@
     <string name="leagueName"> UIUC </string>
     <string name="game1"> Team1 vs Team2 </string>
     <string name="team_button"> teams </string>
+    <string name="VS"> VS. </string>
     <string name="vs"> vs. </string>
     <string name="timeExample"> 8:00 </string>
     <string name="live"> Live </string>
     <string name="stats"> Stats </string>
+    <string name="addNewGame"> Add New Game </string>
+    <string name="addGame"> Add Game </string>
+
 </resources>
