--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,8 +67,8 @@
     <string name="player5">5</string>
     <string name="team1">Team 1</string>
     <string name="team2">Team 2</string>
-    <string name="leagueName"> UIUC </string>
-    <string name="game1"> Team1 vs Team2 </string>
+    <string name="leagueName"> UIUC league </string>
+    <string name="game1"> Team1 VS Team2 </string>
     <string name="team_button"> teams </string>
     <string name="VS"> VS. </string>
     <string name="vs"> vs. </string>
