--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="name_of_app">App Name</string>
     <string name="view_stats">Player Stats</string>
     <string name="view_actions">View Actions</string>
-    <string name="parent_button">View Stats</string>
+    <string name="parent_button">Parents</string>
     <string name="coach_button">Referee</string>
     <string name="fg">FG</string>
     <string name="ThreePT">3PT</string>
@@ -49,8 +49,8 @@
     <string name="action8">FT missed</string>
     <string name="action9">Rebound</string>
     <string name="action10">Foul</string>
-    <string name="action11">Stop Clock</string>
-    <string name="action12">Timeout</string>
+    <string name="action11"></string>
+    <string name="action12"></string>
     <string name="tempFG">1-1</string>
     <string name="tempThree">2-2</string>
     <string name="tempFree">0-7</string>
@@ -67,10 +67,6 @@
     <string name="player5">5</string>
     <string name="team1">Team 1</string>
     <string name="team2">Team 2</string>
-    <string name="team3">Team 3</string>
-    <string name="team4">Team 4</string>
-    <string name="team5">Team 5</string>
-    <string name="team6">Team 6</string>
     <string name="leagueName"> UIUC league </string>
     <string name="game1"> Team1 VS Team2 </string>
     <string name="team_button"> teams </string>
@@ -82,5 +78,15 @@
     <string name="addNewGame"> Add New Game </string>
     <string name="addGame"> Add Game </string>
     <string name="choose"> Choose Game </string>
-
+    <!--player 1-6 placeholdplayer name-->
+    <string name="player1_name">Brandi Beasley</string>
+    <string name="player2_name">Lyric Robins</string>
+    <string name="player3_name">Arieal Scott</string>
+    <string name="player4_name">Carolyn Waleski</string>
+    <string name="player5_name">Cierra Rice</string>
+    <string name="player6_name">Jeanae Terry</string>
+    <string name="placehold_player_name">Basket Ball</string>
+    <string name="password">Password</string>
+    <string name="coach_login">Coach Login</string>
+    <string name="username">Username</string>
 </resources>
