modified ViewTeamsActivity and add two fragment java files. Working but still need to fix the overlapping fragments bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,4 +89,7 @@
     <string name="password">Password</string>
     <string name="coach_login">Coach Login</string>
     <string name="username">Username</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
