working version by adding some string variables and deleting some buttons in the ChosePlayerActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,8 @@
     <string name="action8">Opp 2pt fg</string>
     <string name="action9">Rebound</string>
     <string name="action10">Block</string>
+    <string name="action11">Block</string>
+    <string name="action12">Block</string>
     <string name="tempFG">1-1</string>
     <string name="tempThree">2-2</string>
     <string name="tempFree">0-7</string>
